[gd_scene load_steps=9 format=2]

[ext_resource path="res://menu.png" type="Texture" id=1]
[ext_resource path="res://fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://MainMenu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 2 )

[node name="MainMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 15.0
margin_right = 320.0
margin_bottom = 180.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.745098, 0.560784, 0.560784, 1 )
text = "Plant and Survive"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 320.0
margin_bottom = 156.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 196.0
margin_bottom = 114.0
custom_constants/separation = 6
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 72.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 2 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighscoresButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 72.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0196078, 0.52549, 0.027451, 1 )
custom_colors/font_color_hover = Color( 0.0196078, 0.52549, 0.027451, 1 )
custom_colors/font_color_pressed = Color( 0.0196078, 0.52549, 0.027451, 1 )
text = "high scores"

[node name="TutorialButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 72.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 2 )
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 72.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 4 )
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 72.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 5 )
text = "Quit"
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/HighscoresButton" to="." method="_on_HighscoresButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
