[gd_scene load_steps=10 format=2]

[ext_resource path="res://menu.png" type="Texture" id=1]
[ext_resource path="res://fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/Kenney Pixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://MainMenu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 2 )

[node name="MainMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_right = 321.0
margin_bottom = 183.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 316.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.745098, 0.560784, 0.560784, 1 )
text = "Credits"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 316.0
margin_bottom = 142.0
custom_constants/separation = 25

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2"]
margin_right = 316.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Industrious Ferret by Kevin MacLeod
Link: https://incompetech.filmmusic.io/song/3912
-industrious-ferret
License: http://creativecommons.org/licenses/by/4.0/"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
margin_top = 82.0
margin_right = 316.0
margin_bottom = 100.0
alignment = 1

[node name="MenuButton" type="Button" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 36.0
margin_right = 126.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 3 )
text = "Return to Menu"

[node name="PreviousButton2" type="Button" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 130.0
margin_right = 214.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 4 )
text = "Previous Page"

[node name="NextCreditsButton" type="Button" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 218.0
margin_right = 280.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 5 )
text = "Next Page"
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/HBoxContainer/MenuButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/HBoxContainer/PreviousButton2" to="." method="_on_PreviousButton2_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/HBoxContainer/NextCreditsButton" to="." method="_on_NextCreditsButton_pressed"]
