[gd_scene load_steps=9 format=2]

[ext_resource path="res://menu.png" type="Texture" id=1]
[ext_resource path="res://fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/Kenney Pixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://MainMenu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 2 )

[node name="MainMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 320.0
margin_bottom = 181.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.745098, 0.560784, 0.560784, 1 )
text = "How to Play"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 320.0
margin_bottom = 144.0
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 255.0
margin_bottom = 102.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 191.0
margin_bottom = 72.0
custom_constants/separation = 0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_right = 191.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Plant seeds."

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 12.0
margin_right = 191.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Collect light."

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 24.0
margin_right = 191.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Avoid monsters."

[node name="Label4" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 36.0
margin_right = 191.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Eat plants."

[node name="Label5" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 48.0
margin_right = 191.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Place torches to protect your plants."

[node name="Label6" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 60.0
margin_right = 191.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Survive!"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 76.0
margin_right = 191.0
margin_bottom = 76.0
custom_constants/separation = 0

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 80.0
margin_right = 191.0
margin_bottom = 80.0
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 84.0
margin_right = 191.0
margin_bottom = 102.0
alignment = 1

[node name="MenuButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 17.0
margin_right = 107.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 3 )
text = "Return to Menu"

[node name="ControlsButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 111.0
margin_right = 173.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 4 )
text = "Next Page"
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/MenuButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
